# arrayfire_serde

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: tests.rs
